# langchain_JobResearch

./: .env  .gitignore  README.md  eda.ipynb  job_ads_db.db  main.py  pyproject.toml
reports/: Job_Report_keyword-AI analyst.md  Job_Report_keyword-AI workflow.md  Job_Report_keyword-AI.md  Job_Report_keyword-Data Analyst.md  Job_Report_keyword-LLM.md
tools/: DBHandler.py  DataClass.py  DataProcesser.py  DuchDBHandler.py  JobCrawler.py  JobPosting.py  JobSummarizer.py  OllamaResearcher.py  OllamaSummarizer.py  PostgresDatabase.py  QueryAgent.py  ReportGenerator.py  SQLiteDatabase.py  jobExtractor.py  llamaIndex_extractor.py  logger.py  markdownProcesser.py  webCrawler.py  writeReport.py
