[project]
name = "langchain-jobresearch"
version = "0.1.0"
description = "This is a project to crawl the job advertisements from jobsdb.com.hk by keywords using crawl4ai, then extract job information using LLM and then store them to sqlite3 and then use langchain and ollama to generate job reserach report."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "crawl4ai>=0.7.8",
    "dotenv>=0.9.9",
    "duckdb>=1.4.3",
    "duckdb-engine>=0.17.0",
    "langchain>=1.1.3",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.0",
    "langchain-ollama>=1.0.1",
    "ollama>=0.6.1",
    "sqlmodel>=0.0.27",
]
